--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/caipiao?characterEncoding=UTF-8&autoReconnect=true
+        url: jdbc:mysql://localhost:3306/5288caipiao?characterEncoding=UTF-8&autoReconnect=true
         driver-class-name: com.mysql.jdbc.Driver
         username: root
         password: root
